# SRRArch-simulator

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerOptions.cmake
src/: CMakeLists.txt  decoder.cpp  decoder.h  elf_loader.cpp  elf_loader.h  gitignore  instruction.cpp  instruction.h  logger.cpp  logger.h  main.cpp  memory.cpp  memory.h  registers.cpp  registers.h  simulator.cpp  simulator.h  types.h
